<resources>
    <string name="app_name">Math.lo</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="group">Grupos</string>
    <string name="cuestionario">Cuestionarios</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="CerrarSesion">Cerrar Sesion</string>
    <string name="Sinconizar">Sincronizar</string>
    <string name="Configuracion">Configuracion</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
