<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/usuario_nav_paa"
            android:icon="@mipmap/ic_user_foreground"
            android:title="@string/user"/>
        <item android:id="@+id/cuestionarios_nav_paa"
            android:icon="@drawable/test"
            android:title="@string/cuestionario"/>
        <item android:id="@+id/grupos_nav_paa"
            android:icon="@drawable/team"
            android:title="@string/group"/>
        <item android:title="@string/Configuracion">
            <menu>
                <group android:checkableBehavior="single">
                    <item android:id="@+id/sincronizar_nav_paa"
                        android:icon="@drawable/sync"
                        android:title="@string/Sinconizar"/>
                    <item android:id="@+id/cerrarsesion_nav_paa"
                        android:icon="@drawable/logout"
                        android:title="@string/CerrarSesion"/>
                </group>
            </menu>
        </item>
    </group>
</menu>
